2006-07-26  Albert Chu <chu11@llnl.gov>

	* common/src/argp-common.c (init_common_cmd_args): Make default
	authentication type MD5

	* common/doc/argp-common-authtype.man: Make default authentication
	type MD5

2006-07-25  Albert Chu <chu11@llnl.gov>

	* common/src/err-wrappers.h (__IPMI_TRACE_ERRMSG_CLEANUP): New
	macro.
	
	* common/src/err-wrappers.h (ERR_IPMI_CMD_CLEANUP): Add errmsg support.

	* doc/freeipmi-faq.texi: Minor tweaks and updates.

	* configure.ac: Update lib version.

	* common/src/argp-common.h, common/src/argp-common.c
	(common_parse_opt): Make default authentication type MD5.  Remove
	OEM authentication type.

	* bmc-config/src/bmc-sol-conf-section.c
	(bmc_sol_conf_section_get): Have SOL port commented out on
	checkout by default.
	
2006-07-24  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-user-section.c (get_user_section,
	enable_user_checkout): Comment out the "Enable User" option as
	default behavior.

	* bmc-config/src/bmc-user-section.c (get_user_section): Remove
	"Clear_Password" key.

	* bmc-config/src/bmc-user-section.c (clear_password_checkout,
	clear_password_commit, clear_password_diff,
	clear_password_validate): Remove functions.

	* libfreeipmi/src/ipmi-locate.c (ipmi_locate): Add back
	ipmi_locate_defaults_get_dev_info() to things to try list.

	* bmc-config/src/bmc-config-api.c (set_bmc_enable_user): Add
	workaround for return of 0xC7 issue.
	
2006-07-24  A Balamurugan  <bala@zresearch.com>

	* ipmi-locate/src/ipmi-locate.c (dmidecode_probe_display):
	modified according to api change.

2006-07-23  A Balamurugan  <bala@zresearch.com>

	* ipmi-locate/src/ipmi-locate.c (dmidecode_probe_display): new
	function.

	* ipmi-locate/src/ipmi-locate.c (main): uses dmidecode probing.

	* libfreeipmi/include/freeipmi/ipmi-slave-address-spec.h: uses
	0x42 as IPMI_SSIF_SMBUS_SLAVE_ADDRESS.

	* libfreeipmi/src/ipmi-locate.c (ipmi_locate): removed
	ipmi_locate_defaults_get_dev_info() in things_to_try list.
